2000-05-17  Larry Jones  <larry.jones@sdrc.com>

	* main.c (main): Use full set of options when looking for -f to
	avoid misparsing options that take values (previously, -sVAR=foo
	was incorrectly parsed as though it were -s -V -A -R -= -f -o -o
	because it didn't know that -s takes a value).
	* sanity.sh (info-6b): New test for above.

	* sanity.sh (conflicts-status): Fix tests so they work remotely, too.

2000-05-17  Jim Meyering  <meyering@lucent.com>

	* sanity.sh (TESTDIR): Fix braino in last change:
	cd to /tmp before invoking pwd.

	* sanity.sh: Set TESTDIR so that `make check' passes even when /tmp
	is a symlink.
	(join-36): Use $TESTDIR rather than hard-coding `/tmp/cvs-sanity'.
	(conflicts-132): Remove unnecessary `rm aa'.

2000-05-16  Jim Kingdon  <kingdon@redhat.com>

	* cvs.h, checkout.c (safe_location): Make extern.
	* import.c (import): Call it rather than reimplementing
	(incompletely) the same check.

2000-05-16  Larry Jones  <larry.jones@sdrc.com>

	* rcs.h, subr.c (file_has_markers): Check for any of the three
	conflict marker lines, not just one.
	* sanity.sh (conflicts-status): New tests for above.
	* sanity.sh: Revise to avoid tripping the above check when merging
	changes into sanity.sh itself.

2000-05-15  Larry Jones  <larry.jones@sdrc.com>

	* update.c (join_file): When registering the result of the merge,
	make sure that the version number is valid (vers->vn_rcs may be
	null if the file doesn't exist on the branch yet).  (Patch submitted
	by Robert de Vries <rhdv@rhdv.cistron.nl>.)
	* update.c (join_file): Correct diagnostics (previous change was not
	correct -- the file *does* exist in the specified revision, it just
	doesn't exist in the sandbox).
	* sanity.sh (import-113, join): New tests and changes for above.

2000-05-04  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Look for a useful id program.  Since we're getting
	the real username for some tests anyway, use it for all the